[project]
name = "poetic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "crawl4ai>=0.6.3",
    "google-adk>=1.0.0",
    "google-genai>=1.16.1",
    "pydantic>=2.11.5",
]

[tool.setuptools.packages.find]
where = ["./"]
include = ["src"]